# events_face

./: .pre-commit-config.yaml  main.py  manage.py  pyproject.toml
src/: db.sqlite3  urls.py
src/authapp/: serializers.py  urls.py  views.py
src/core/: asgi.py  settings.py  wsgi.py
src/events/: admin.py  models.py  serializers.py  urls.py  utils.py  views.py
src/events/migrations/: 0001_initial.py  0002_alter_event_event_time_eventregistration.py
src/outbox/: models.py
src/outbox/management/commands/: process_outbox.py
src/outbox/migrations/: 0001_initial.py
src/sync/: models.py  services.py
src/sync/management/commands/: sync_events.py
src/syncapp/: models.py  services.py
src/syncapp/management/commands/: sync_events.py
src/syncapp/migrations/: 0001_initial.py
