[project]
name = "events-face"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "django>=5.2.7",
    "django-filter>=25.2",
    "djangorestframework>=3.16.1",
]

[dependency-groups]
dev = [
    "ruff>=0.14.2",
]
[tool.ruff]
line-length = 88

[tool.ruff.lint]
extend-select = ["I"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
